--- a/pkg/templates/generate/plain/go.mod.tmpl
+++ b/pkg/templates/generate/plain/go.mod.tmpl
@@ -14,7 +14,7 @@ github.com/gofiber/fiber/v2 v2.17.0 // indirect
 github.com/gofiber/websocket/v2 v2.0.8 // indirect
 github.com/google/uuid v1.1.2 // indirect
 github.com/imdario/mergo v0.3.12 // indirect
-github.com/jchv/go-winloader v0.0.0-20200815041850-dec1ee9a7fd5 // indirect
+github.com/unix-world/go-winloader-jchv v0.0.0-20200815041850-dec1ee9a7fd5 // indirect
 github.com/klauspost/compress v1.12.2 // indirect
 github.com/leaanthony/debme v1.2.1 // indirect
 github.com/leaanthony/go-ansi-parser v1.0.1 // indirect
